# audacious-plugin-rpc

./: .gitignore  CMakeLists.txt  README.md  audacious-plugin-rpc.cc
.github/: FUNDING.yml
.github/workflows/: autobuild-workflow.yaml
